* [FIX][UI] The main footer in the Unified Admin Backend also needs the 290px left margin that the main content has to avoid being covered by the left column.

--- a/themes/base_files/scss/feature/adminui.scss
+++ b/themes/base_files/scss/feature/adminui.scss
@@ -760,7 +760,8 @@ $color-light: rgba(0, 0, 0, 0.5); // Not replaced as it's only used for minor de
 }
 
 @media (min-width: 992px) {
-    .tiki-admin .container.container-std .col1 {
+    .tiki-admin .container.container-std .col1,
+    .tiki-admin .middle_outer .main-footer {
         padding-left: 290px;
     }
 }
